<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.zuoyangding.aroundme.Activity.add_group">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/topBar"
        android:background="@drawable/top_bar"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/leave_layout"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leave_button"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/join_leave_button"
                android:text="leave"
                android:textColor="#B9A336" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_name_layout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:gravity="fill_vertical|center_horizontal"
                android:text="Group name"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/report_layout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/groupReport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/report_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_layout"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/joined_button"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/join_leave_button"
                android:text="Join"
                android:textColor="#B9A336" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/bottom_bar"
        android:id="@+id/bottomBar">

        <ImageButton
            android:id="@+id/add_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/add_picture" />

        <EditText
            android:layout_height="40dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/enterMessage"
            android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="250dp" />

        <ImageButton
            app:srcCompat="@drawable/send_message"
            android:id="@+id/send_message"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginTop="15dp"
            android:layout_marginRight="0dp"
            android:scaleType="centerInside"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/chat_messages"
        android:layout_alignParentStart="true"
        android:dividerHeight="16dp"
        android:divider="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_above="@+id/bottomBar"></ListView>


</RelativeLayout>