...
        </SearchView>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/add"
            android:id="@+id/addGroupButton"
            android:background="@null"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>
...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottomBar"
        android:id="@+id/group_list"/>


</RelativeLayout>
