...
    tools:context="com.example.zuoyangding.aroundme.Activity.LoginActivity">

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/google_btn"
        android:layout_below="@+id/email_register_bt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"></com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/email_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Login"
        android:layout_below="@+id/password_tx"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"

        android:layout_alignParentEnd="true"
        android:background="@drawable/profile_button_dark"
        android:textColor="#ffffff" />


    <EditText
        android:id="@+id/email_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
...
