<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.zuoyangding.aroundme.Activity.add_group">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/topBar"
        android:background="@drawable/top_bar">

        <ImageButton
            app:srcCompat="@drawable/back_button"
            android:id="@+id/imageButton2"
            android:background="@null"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <ImageView
            app:srcCompat="@drawable/create_new_group"
            android:id="@+id/imageView"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:layout_marginLeft="40dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/bottomBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bottom_bar">

        <Button
            android:id="@+id/createGroup"
            android:background="@drawable/create_group"
            android:scaleType="fitXY"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:layout_below="@+id/enterGroupName"
            android:layout_alignStart="@+id/enterGroupName"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_width="150dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true"
        android:id="@+id/group_name_layout"
        android:background="#fffff4b8"
        android:layout_height="50dp">

        <TextView
            android:text="Group name:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/groupName"
            android:textSize="24sp"
            android:textColor="#ffB9A336"
            android:layout_below="@+id/topBar"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/group_name_layout"
        android:layout_alignParentStart="true"
        android:id="@+id/enter_group_name_layout">

        <EditText
            android:id="@+id/enterGroupName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/group_name_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Enter group name"
            android:inputType="textPersonName"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/enter_group_name_layout"
        android:layout_centerHorizontal="true"
        android:id="@+id/topics_layout"
        android:background="#fffff4b8"
        android:layout_height="50dp">

        <TextView
            android:text="Topics:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topics"
            android:textSize="24sp"
            android:textColor="#ffB9A336"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/topics_layout"
        android:id="@+id/enter_topics_layout">

        <EditText
            android:id="@+id/Topics"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/enterGroupName"
            android:layout_below="@+id/enterGroupName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Enter Topics"
            android:inputType="textPersonName"
            android:textSize="24sp" />
    </LinearLayout>


</RelativeLayout>
