...

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/group_list"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/topBar" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
...
        android:id="@+id/bottomBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageButton
            app:srcCompat="@drawable/home_page_button"
            android:id="@+id/homepage_button"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp" />
...
